[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Input.gd" type="Script" id=1]
[ext_resource path="res://FontsRes/pixel_mono_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://Scripts/CommandHandler.gd" type="Script" id=4]
[ext_resource path="res://Scenes/ShipLevels/Level1.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/RoomsManager.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=9]
[ext_resource path="res://Scenes/GameInfo.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/SidePanel.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/ShipLevels/Level2.tscn" type="PackedScene" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="RoomsManager" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Level1" parent="RoomsManager" instance=ExtResource( 6 )]
position = Vector2( 2078, 894 )

[node name="Level2" parent="RoomsManager" instance=ExtResource( 12 )]
position = Vector2( 668, 1388 )

[node name="CommandHandler" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Player" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Background" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Columns" type="HBoxContainer" parent="Background/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 15

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer/Columns"]
margin_right = 669.0
margin_bottom = 560.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="GameInfo" parent="Background/MarginContainer/Columns/Rows" instance=ExtResource( 10 )]
margin_right = 669.0

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/Columns/Rows"]
margin_top = 530.0
margin_right = 669.0
margin_bottom = 560.0
rect_min_size = Vector2( 0, 30 )
custom_styles/panel = SubResource( 9 )

[node name="Columns" type="HBoxContainer" parent="Background/MarginContainer/Columns/Rows/InputArea"]
margin_right = 669.0
margin_bottom = 30.0

[node name="Caret" type="Label" parent="Background/MarginContainer/Columns/Rows/InputArea/Columns"]
margin_top = 6.0
margin_right = 20.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = " > "

[node name="Input" type="LineEdit" parent="Background/MarginContainer/Columns/Rows/InputArea/Columns"]
margin_left = 24.0
margin_right = 669.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/read_only = SubResource( 8 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
placeholder_alpha = 0.4
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 1 )

[node name="SidePanel" parent="Background/MarginContainer/Columns" instance=ExtResource( 11 )]
margin_left = 684.0
rect_min_size = Vector2( 300, 0 )

[node name="MainAudio" type="AudioStreamPlayer" parent="."]

[connection signal="text_entered" from="Background/MarginContainer/Columns/Rows/InputArea/Columns/Input" to="." method="_on_Input_text_entered"]
[connection signal="text_entered" from="Background/MarginContainer/Columns/Rows/InputArea/Columns/Input" to="Background/MarginContainer/Columns/Rows/InputArea/Columns/Input" method="_on_Input_text_entered"]
